# Platinum-Palladium-AI-Printing-Tool

./: .gitignore  AGENTIC_NEXT_STEPS.md  AGENTIC_NEXT_STEPS_V3.md  ANALYSIS_GAPS_AND_AI_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEEP_LEARNING_IMPLEMENTATION.md  GAP_ANALYSIS_REPORT.md  HUGGINGFACE_README.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TEMPLATE.md  INVESTIGATION_SUMMARY.md  LICENSE  NEXT_STEPS_AGENTIC_DEVELOPMENT.md  PLATINUM_PALLADIUM_AI_USAGE.md  QUICK_REFERENCE.md  README.md  app.py  database.py  hf_space_page.html  package-lock.json  package.json  pyproject.toml  requirements-dl.txt  requirements.txt  test_gradio.py
.agent/rules/: kb-protocol.md
.agent/skills/dev-sqe-handoff/: SKILL.md
.agent/skills/devops_cicd/: SKILL.md
.agent/skills/planning/: SKILL.md
.agent/skills/pre-pr-verification/: SKILL.md
.agent/skills/python_aiml/: SKILL.md
.agent/workflows/: create-feature-branch.md  handoff.md  husky_setup.md  migrate-component.md  mine-brain.md  pr_template.md  pre-pr.md  run-gap-analysis.md  verify-all.md
.claude/: settings.json  settings.local.json
.claude/agents/: documentation-agent.md  gap-remediation-agent.md  migration-coordinator.md  testing-agent.md  ui-migration-agent.md
.claude/commands/: generate-tests.md  migrate-component.md  verify-equivalence.md
.claude/hooks/: dev-sqe-start.sh  kb-start.sh  planning-start.sh  pre-pr-start.sh
.claude/skills/dev-sqe-handoff/: SKILL.md
.claude/skills/planning-handoff/: SKILL.md
.claude/skills/pre-pr-handoff/: SKILL.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml  tests.yml
docs/: architecture.md  deep_learning_features.md  enhanced-calculations.md  quick-start-qa.md  split_grade_printing.md
docs/migration/: config.json  progress.json
examples/: advanced_features_demo.py  basic_calibration.py  calibrate_paper_curve.py  comprehensive_demo.py  deep_learning_demo.py  deep_learning_usage.py  education_demo.py  enhanced_calculations_demo.py  generate_sample_plot.py  integrations_demo.py  performance_monitoring_example.py  qa_example.py  quick_start.py  recipe_management_demo.py  split_grade_example.py  template_example.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/scripts/: migration-status.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  styled.d.ts  vite-env.d.ts
frontend/src/api/: client.ts  hooks.test.tsx  hooks.ts  index.ts  queryClient.ts
frontend/src/config/: api.config.ts  chemistry.config.ts  config.test.ts  env.ts  featureFlags.test.ts  featureFlags.ts  index.ts  tablet.config.ts
frontend/src/hooks/: index.ts  useChat.test.tsx  useChat.ts  useDashboardData.test.tsx  useDashboardData.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useUndoRedo.test.ts  useUndoRedo.ts
frontend/src/lib/: index.ts  (+4 more)
frontend/tests/: setup.ts
kb/ledger/: ledger.jsonl
kb/sessions/: dev-sqe.state.json  planning.state.json  pre-pr.state.json
kb/summaries/: dev-sqe.md
migration/: component-map.json
scripts/: database.py  train_demo.py  verify-kb-protocol.sh  visualize_networks.py
src/ptpd_calibration/: __init__.py  bootstrap.py  config.py
tests/: README.md  __init__.py  conftest.py  repro_issue_grayscale_validation.py  utils.py  verify_curve_pipeline_fix.py
tests/agents/: __init__.py  test_composite_tools.py  test_e2e_journeys.py  test_functional.py  test_router.py  test_skills.py  test_smart_environment.py  test_smart_learning.py  test_smart_prediction.py
tests/api/: __init__.py  conftest.py  test_ai_endpoints.py  test_calibration_endpoints.py  test_curve_endpoints.py  test_deep_learning_endpoints.py  test_health_endpoints.py  test_scan_endpoints.py
tests/e2e/: conftest.py  test_api_persistence.py  test_calibration_workflow.py  test_curve_display.py  test_curve_editor_ui.py  test_deep_learning_journey.py  test_deep_learning_pipeline.py  test_deep_learning_user_journeys.py  test_error_handling.py  test_gcp_workflow.py  test_journey.py  test_session_management.py  test_user_journey_comprehensive.py  test_user_journeys.py  test_vertex_e2e.py
tests/fixtures/: create_dummy_image.py
tests/integration/: __init__.py  test_api_endpoints.py  test_curve_workflow.py  test_deep_learning_integration.py  test_hardware_simulation.py  test_template_integration.py  test_vertex_integration.py
tests/llm/: __init__.py  test_client.py
tests/mcp/: __init__.py  conftest.py  test_config.py  test_integration.py  test_lm_studio.py  test_resources.py  test_server.py  test_tools.py
tests/performance/: __init__.py  conftest.py  locustfile.py  test_curve_performance.py  test_database_performance.py  test_image_processing_performance.py
tests/sanity/: __init__.py  test_deployment_sanity.py
tests/unit/: __init__.py  test_advanced_features.py  test_agents.py  test_ai_enhance.py  test_alternative_calculators.py  test_auto_linearizer.py  test_batch_processor.py  test_calibration_database.py  test_chemistry_calculator.py  test_communication.py  test_curve_adjuster.py  test_curves.py  test_cyanotype_validations.py  test_data_management.py  test_deep_learning.py  test_education.py  test_enhanced_calculations.py  test_exposure.py  test_exposure_calculator.py  test_gcp_config.py  test_gcp_storage.py  test_gcp_vertex.py  test_hardware_integrations.py  test_histogram_analyzer.py  test_image_processor.py  test_imports.py  test_integrations.py  test_kb_hooks.py  test_kb_protocol.py  test_llm_assistant.py  test_llm_client.py  test_llm_prompts.py  test_ml.py  test_models.py  test_modifier.py  test_neural_curve_tab.py  test_neuro_symbolic_constraints.py  test_neuro_symbolic_curve_generator.py  test_neuro_symbolic_knowledge_graph.py  test_neuro_symbolic_regression.py  (+23 more)
tests/utils/: __init__.py  assertions.py  data_builders.py  mock_factories.py
tests/visual/: __init__.py  conftest.py  test_ui_visual_regression.py
(+438 files in other folders)
