[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "ptpd-calibration"
version = "1.0.0"
description = "AI-powered calibration system for platinum/palladium printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ian Shank", email = "ianshank@users.noreply.github.com" }
]
keywords = [
    "platinum",
    "palladium",
    "printing",
    "calibration",
    "photography",
    "alternative-process",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
]
deep = [
    "torch>=2.0.0",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]
ui = [
    "gradio>=4.0.0",
    "huggingface_hub>=0.25,<1.0",
]
all = [
    "ptpd-calibration[ml,deep,llm,api,ui]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    # Core testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",      # Parallel test execution
    "pytest-html>=4.1.0",        # Enhanced HTML reports
    "pytest-timeout>=2.3.0",     # Test timeouts

    # Selenium E2E testing
    "selenium>=4.15.0",
    "pytest-selenium>=4.0.0",
    "webdriver-manager>=4.0.0",  # Auto-manage browser drivers

    # API testing
    "httpx>=0.27.0",             # Async HTTP client for API tests
    "pytest-httpx>=0.30.0",      # HTTPX pytest plugin

    # Performance testing
    "pytest-benchmark>=4.0.0",   # Benchmarking
    "locust>=2.20.0",            # Load testing

    # Visual regression testing
    "pillow>=10.0.0",
    "pixelmatch>=0.3.0",         # Pixel-level image comparison

    # Test data generation
    "faker>=22.0.0",             # Fake data generation
    "factory-boy>=3.3.0",        # Test factories

    # Mocking and fixtures
    "responses>=0.24.0",         # Mock HTTP requests
    "pytest-mock>=3.12.0",       # Mocking utilities
    "freezegun>=1.3.0",          # Time freezing for tests
]

[project.scripts]
ptpd = "ptpd_calibration.cli:main"
ptpd-server = "ptpd_calibration.api.server:main"

[project.urls]
Homepage = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool"
Documentation = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool#readme"
Repository = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool"
Issues = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ptpd_calibration"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/ptpd_calibration --cov-report=term-missing"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, real components)",
    "e2e: End-to-end tests (require running app)",
    "selenium: Selenium browser tests (require WebDriver)",
    "api: API endpoint tests",
    "performance: Performance and benchmark tests",
    "visual: Visual regression tests",
    "slow: Tests that take a long time to run",
    "browser: Tests requiring a browser (Selenium or Playwright)",
    "functional: Functional tests without browser",
    "deep: Deep learning tests (require PyTorch)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
timeout = 300

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["ptpd_calibration"]

[tool.coverage.run]
branch = true
source = ["src/ptpd_calibration"]
omit = [
    "*/ui/*",           # UI modules require integration tests
    "*/api/server.py",  # API server requires integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["tests"]
