[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "ptpd-calibration"
version = "1.0.0"
description = "AI-powered calibration system for platinum/palladium printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ian Shank", email = "ianshank@users.noreply.github.com" }
]
keywords = [
    "platinum",
    "palladium",
    "printing",
    "calibration",
    "photography",
    "alternative-process",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]
gcp = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.27.0",
]
ui = [
    "gradio>=4.0.0",
    "huggingface_hub>=0.25,<1.0",
]
all = [
    "ptpd-calibration[ml,llm,api,ui,gcp]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ptpd = "ptpd_calibration.cli:main"
ptpd-server = "ptpd_calibration.api.server:main"

[project.urls]
Homepage = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool"
Documentation = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool#readme"
Repository = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool"
Issues = "https://github.com/ianshank/Platinum-Palladium-AI-Printing-Tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ptpd_calibration"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/ptpd_calibration --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from (requires AST-aware multi-line fixes)
    "C901",   # too complex
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (clarity preference)
]

[tool.ruff.lint.per-file-ignores]
# Tests: unused arguments are common in fixtures/mocks; B017 is valid for asserting any exception
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "B007", "B017", "E402", "E701", "E741", "SIM102", "SIM105", "SIM117"]
# Gradio UI: event handlers must accept arguments dictated by Gradio's callback signatures
"src/ptpd_calibration/ui/**/*.py" = ["ARG001", "ARG002", "ARG005", "B007", "E402"]
# Education module: tutorial/example code uses simplified patterns
"src/ptpd_calibration/education/**/*.py" = ["ARG001", "ARG002"]
# Curves/ML/Detection: abstract interface stubs have params for future implementation
"src/ptpd_calibration/curves/**/*.py" = ["ARG002", "ARG004"]
"src/ptpd_calibration/ml/**/*.py" = ["ARG002"]
"src/ptpd_calibration/detection/**/*.py" = ["ARG002"]
"src/ptpd_calibration/imaging/split_grade.py" = ["ARG002"]
"src/ptpd_calibration/monitoring/**/*.py" = ["ARG002"]
"src/ptpd_calibration/gcp/storage.py" = ["ARG002"]
"src/ptpd_calibration/agents/**/*.py" = ["ARG002", "SIM102"]
"src/ptpd_calibration/ai/**/*.py" = ["ARG002"]
"src/ptpd_calibration/analysis/**/*.py" = ["ARG002"]
"src/ptpd_calibration/ui/tabs/**/*.py" = ["E701", "ARG005"]


[tool.ruff.lint.isort]
known-first-party = ["ptpd_calibration"]

[tool.coverage.run]
branch = true
source = ["src/ptpd_calibration"]
omit = [
    "*/ui/*",           # UI modules require integration tests
    "*/api/server.py",  # API server requires integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["tests"]
